C876: Fixing long url word wrapping issue on emails

--- a/Markel.REMUS.DigitalBrandSystem/zurb-html-email-generation/Scss/_markel-additions.scss
+++ b/Markel.REMUS.DigitalBrandSystem/zurb-html-email-generation/Scss/_markel-additions.scss
@@ -67,5 +67,6 @@ body, .body {
 }
 
 .wrap-long-word {
+    display: block;
     word-break: break-all;
 }
